--- a/docs_Agrosoft/src/content/docs/index.mdx
+++ b/docs_Agrosoft/src/content/docs/index.mdx
@@ -1,36 +1,33 @@
 ---
-title: Welcome to Starlight
+title: Bienvenido a Docs AgroSoft
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Aqui encontraras todos los documentos sobre nuestro sistema!
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/logoAgrosofWB.png
   actions:
-    - text: Example Guide
+    - text: INICIEMOS
       link: /doc1/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Repositorio en Git Hub.
+      link: https://github.com/MaiberCordoba/ProyectoFormativoAgrosoft
       icon: external
       variant: minimal
 ---
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
-## Next steps
+## Mas Enfoques
 
 <CardGrid stagger>
-  <Card title="Update content" icon="pencil">
-    Edit `src/content/docs/index.mdx` to see this page change.
+  <Card title="Manual de Usuario" icon="pencil">
+    Eres nuevo en nuestro Sistema. Aqui entenderas como funciona.
   </Card>
-  <Card title="Add new content" icon="add-document">
-    Add Markdown or MDX files to `src/content/docs` to create new pages.
+  <Card title="Manual Tecnico" icon="add-document">
+    Conoce mas sobre la estructura interna de nuestro proyecto AgroSoft.
   </Card>
-  <Card title="Configure your site" icon="setting">
-    Edit your `sidebar` and other config in `astro.config.mjs`.
-  </Card>
-  <Card title="Read the docs" icon="open-book">
-    Learn more in [the Starlight Docs](https://starlight.astro.build/).
+  <Card title="Documento de Diseños UML" icon="setting">
+    funcionalidades y secuencias de la informacion.
   </Card>
 </CardGrid>
